[package]
name = "fcnv"
version = "0.1.0"
authors = ["Maxim Kosterov <maxim.kosterov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg2polylines = "0.5.2"
clap = "2.33.3"
quick-xml = "0.13.3"
usvg = "0.12.0"
resvg = "0.12.0"